# rust-htmx-todos

./: .gitignore  Cargo.toml
.sqlx/: query-70c17b612ee52f49d13c5fc5c6bf84c9b573b98da650dd680dec23d47fd2192d.json  query-9fe76ac5095633dae477bd504119afa566fd545d69d785d7f31c9f17e0923f3b.json  query-a606f02f7d0431d5cf579e86a7b1245742997153688ad4476e29474b46365676.json  query-d9b3c88712a3fb32f626eb6c82056605ef0915008386ae54083da137802f4ad3.json  query-f39b2e4d06c9f720db28e029c150201cd29097ef8281784b87021aa9ce59c82a.json
migrations/: 20231130001410_todo.sql  20231130133123_users.sql
src/: main.rs  templates.rs  users.rs
templates/: base.html  index.html  logged_in.html
