[package]
name = "rustodos"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.6.20"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
shuttle-secrets = "0.34.0"
shuttle-shared-db = { version = "0.34.0", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["postgres", "macros"] }
tokio = "1.28.2"
tracing = "0.1.40"
toml = "0.8.8"
serde = { version = "1.0.152", features = ["derive"] }
lazy_static = "1.4.0"
tower-http = { version = "0.5.0", features = ["fs"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
